--- a/01 task.html
+++ b/01 task.html
@@ -10,7 +10,20 @@
   <h1>Beginning</h1>
   <script>
   "use strict";
-  
+  /*let hash = '#', result = '';
+  for(let i = 0; i < 7; i++){
+   console.log(result = result + hash);
+  }
+  */
+  for(let i = 0; i <= 100; i++){
+    if( i % 3 == 0){
+    console.log('Fizz');
+    } else if(i % 5 == 0 && i % 3 != 0){
+      console.log('Buzz');
+    } else{
+      console.log(i);
+    }
+  }
   </script>
 
 </body>
