--- a/01 task.html
+++ b/01 task.html
@@ -15,8 +15,7 @@
    console.log(result = result + hash);
   }
   */
-  /*
-  for(let i = 0; i <= 100; i++){
+  /* for(let i = 0; i <= 100; i++){
     let result = '';
     if( i % 3 == 0) result += 'Fizz';
     if(i % 5 == 0) result += 'Buzz';
