--- a/01 task.html
+++ b/01 task.html
@@ -15,14 +15,42 @@
    console.log(result = result + hash);
   }
   */
-  /* for(let i = 0; i <= 100; i++){
+  /* for(let i = 1; i <= 100; i++){
     let result = '';
     if( i % 3 == 0) result += 'Fizz';
     if(i % 5 == 0) result += 'Buzz';
     console.log(result || i);
   }
   */
-  
+  /*chessboard
+  let chessString = '';
+  for(let line = 0; line < 8; line++){
+  if(line % 2 == 0) chessString += ` # # # # # # # #\n`;
+  else{chessString += `# # # # # # # # \n`;}
+  }
+  console.log(chessString);
+*/
+function chessBoard(width, height){
+  let cboard = '';
+  let flag = 0;
+  for(let line = 1; line <= width * height; line++){
+    if(flag == 0){
+      if(line % 2 == 0) cboard += '#';
+      if(line % 2 != 0) cboard += ' ';
+      if(line % width == 0) {cboard += '\n'; flag = 1;}
+    }
+    else if(flag == 1){
+      if(line % 2 != 0) cboard += '#';
+      if(line % 2 == 0) cboard += ' ';
+      if(line % width == 0) {cboard += '\n'; flag = 0;}
+    }
+
+  }
+  return cboard;
+}
+let cboard = chessBoard(12,6);
+console.log(cboard);
+
   </script>
 
 </body>
