--- a/01 task.html
+++ b/01 task.html
@@ -15,14 +15,61 @@
    console.log(result = result + hash);
   }
   */
-  /* for(let i = 0; i <= 100; i++){
+  /* for(let i = 1; i <= 100; i++){
     let result = '';
     if( i % 3 == 0) result += 'Fizz';
     if(i % 5 == 0) result += 'Buzz';
     console.log(result || i);
   }
   */
-  
+  /*chessboard
+  let chessString = '';
+  for(let line = 0; line < 8; line++){
+  if(line % 2 == 0) chessString += ` # # # # # # # #\n`;
+  else{chessString += `# # # # # # # # \n`;}
+  }
+  console.log(chessString);
+*/
+
+function chessBoard(width, height){
+  let cboard = '';
+  let flag = 0;
+  for(let line = 1; line <= width * height; line++){
+    if(flag == 0){
+      if(line % 2 == 0) cboard += '#';
+      if(line % 2 != 0) cboard += ' ';
+      if(line % width == 0) {cboard += '\n'; flag = 1;}
+    }
+    else if(flag == 1){
+      if(line % 2 != 0) cboard += '#';
+      if(line % 2 == 0) cboard += ' ';
+      if(line % width == 0) {cboard += '\n'; flag = 0;}
+    }
+
+  }
+  return cboard;
+}
+let cboard = chessBoard(1000,1000);
+console.log(cboard);
+
+/*
+let size = 1000;
+
+let board = "";
+
+for (let y = 0; y < size; y++) {
+  for (let x = 0; x < size; x++) {
+    if ((x + y) % 2 == 0) {
+      board += " ";
+    } else {
+      board += "#";
+    }
+  }
+  board += "\n";
+}
+
+console.log(board);*/
+
   </script>
 
 </body>
