--- a/02 tasks.html
+++ b/02 tasks.html
@@ -10,26 +10,12 @@
   <h1>Chapter 2</h1>
   <script>
   "use strict";
-  /*let hash = '#', result = '';
-  for(let i = 0; i < 7; i++){
-   console.log(result = result + hash);
-  }
-  */
-  /* for(let i = 1; i <= 100; i++){
-    let result = '';
-    if( i % 3 == 0) result += 'Fizz';
-    if(i % 5 == 0) result += 'Buzz';
-    console.log(result || i);
-  }
-  */
-  /*chessboard
-  let chessString = '';
-  for(let line = 0; line < 8; line++){
-  if(line % 2 == 0) chessString += ` # # # # # # # #\n`;
-  else{chessString += `# # # # # # # # \n`;}
-  }
-  console.log(chessString);
-*/
+  let min = (a, b) => a <= b ? a : b;
+  console.log(min(3,5));
+  console.log(min(5,3));
+  console.log(min(-1,-1));
+  
+  
 
   </script>
 
